--- a/x86-64+.config
+++ b/x86-64+.config
@@ -297,7 +297,11 @@ CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
 # CONFIG_SING_BOX_WITH_GVISOR is not set
+
+# Firewall Configurations
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
+CONFIG_PACKAGE_firewall=y
+# CONFIG_PACKAGE_firewall4 is not set
 
 # socat
 CONFIG_PACKAGE_socat=y
