--- a/.github/workflows/x86-64-op.yml
+++ b/.github/workflows/x86-64-op.yml
@@ -4,7 +4,7 @@
 # https://github.com/P3TERX/Actions-OpenWrt
 # Description: Build OpenWrt using GitHub Actions
 
-name: X86-64
+name: X86-64_openwrt
 
 on:
   repository_dispatch:
