--- a/x86-64+.config
+++ b/x86-64+.config
@@ -369,3 +369,13 @@ CONFIG_PACKAGE_luci-app-passwall2_Iptables_Transparent_Proxy=y
 # ddns-go
 CONFIG_PACKAGE_luci-app-ddns-go=y
 CONFIG_PACKAGE_ddns-go=y
+
+# Add LuCI with SSL support
+CONFIG_PACKAGE_luci-ssl-openssl=y
+
+# Add ACME client and its LuCI application
+CONFIG_PACKAGE_acme=y
+CONFIG_PACKAGE_luci-app-acme=y
+
+# Add ACME DNS API for DNS-based certificate verification
+CONFIG_PACKAGE_acme-acmesh-dnsapi=y
