--- a/x86-64+.config
+++ b/x86-64+.config
@@ -304,9 +304,9 @@ CONFIG_PACKAGE_firewall=y
 # CONFIG_PACKAGE_firewall4 is not set
 
 # socat
-CONFIG_PACKAGE_socat=y
-CONFIG_PACKAGE_luci-app-socat=y
-CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
+# CONFIG_PACKAGE_socat=y
+# CONFIG_PACKAGE_luci-app-socat=y
+# CONFIG_PACKAGE_luci-i18n-socat-zh-cn=y
 
 # adguardhome
 #CONFIG_PACKAGE_luci-app-adguardhome=y
