--- a/.github/workflows/x86-64-op.yml
+++ b/.github/workflows/x86-64-op.yml
@@ -68,6 +68,11 @@ jobs:
 
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
+           rm -rf feeds/luci/applications/luci-app-mosdns && rm -rf feeds/packages/net/{alist,adguardhome,smartdns}
+           rm -rf feeds/luci/applications/luci-app-serverchan
+           rm -rf feeds/packages/lang/golang
+           rm -rf feeds/packages/v2dat
+           git clone https://github.com/kenzok8/golang feeds/packages/lang/golang
 
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
