--- a/x86-64+.config
+++ b/x86-64+.config
@@ -367,8 +367,8 @@ CONFIG_PACKAGE_luci-app-passwall2_Iptables_Transparent_Proxy=y
 # CONFIG_PACKAGE_luci-i18n-mosdns-zh-cn=y
 
 # ddns-go
-CONFIG_PACKAGE_luci-app-ddns-go=y
-CONFIG_PACKAGE_ddns-go=y
+#CONFIG_PACKAGE_luci-app-ddns-go=y
+#CONFIG_PACKAGE_ddns-go=y
 
 # Add LuCI with SSL support
 #CONFIG_PACKAGE_luci-ssl-openssl=y
