--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -83,6 +83,11 @@ jobs:
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
+    - name: Remove conflicting packages
+      run: |
+        cd openwrt
+        rm -rf feeds/smpackage/{base-files,dnsmasq,firewall*,fullconenat,libnftnl,nftables,ppp,opkg,ucl,upx,vsftpd*,miniupnpd-iptables,wireless-regdb}
+
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
 
@@ -93,14 +98,6 @@ jobs:
         chmod +x $DIY_P2_SH
         cd openwrt
         $GITHUB_WORKSPACE/$DIY_P2_SH
-
-    - name: Remove conflicting packages
-      run: |
-        cd openwrt
-        # 删除冲突的 socat 和 firewall4 包
-        rm -f build_dir/target-x86_64_musl/root-x86/etc/config/socat
-        ./scripts/feeds uninstall firewall4
-        ./scripts/feeds uninstall socat
 
     - name: Download package
       id: package
