--- a/.github/workflows/x86-64.yml
+++ b/.github/workflows/x86-64.yml
@@ -83,7 +83,7 @@ jobs:
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
-    - name: Remove conflicting packages
+    - name: Remove 重复 packages
       run: |
         cd openwrt
         rm -rf feeds/smpackage/{base-files,dnsmasq,firewall*,fullconenat,libnftnl,nftables,ppp,opkg,ucl,upx,vsftpd*,miniupnpd-iptables,wireless-regdb}
