--- a/x86-64+.config
+++ b/x86-64+.config
@@ -163,7 +163,6 @@ CONFIG_PACKAGE_kmod-tpm=y
 CONFIG_PACKAGE_kmod-udptunnel4=y
 CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-veth=y
-CONFIG_PACKAGE_kmod-wireguard=y
 CONFIG_PACKAGE_ksmbd-server=y
 CONFIG_PACKAGE_libbz2=y
 CONFIG_PACKAGE_libcap-bin=y
@@ -227,7 +226,6 @@ CONFIG_PACKAGE_luci-i18n-statistics-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-udpxy-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
-CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_mdadm=y
 CONFIG_PACKAGE_mount-utils=y
@@ -345,7 +343,6 @@ CONFIG_PACKAGE_v2ray-core=y
 CONFIG_PACKAGE_v2ray-geoip=y
 CONFIG_PACKAGE_v2ray-geosite=y
 CONFIG_PACKAGE_v2ray-plugin=y
-CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_xupnpd=y
 CONFIG_PACKAGE_xz=y
 CONFIG_PACKAGE_xz-utils=y
@@ -359,7 +356,6 @@ CONFIG_SING_BOX_WITH_ECH=y
 CONFIG_SING_BOX_WITH_GVISOR=y
 CONFIG_SING_BOX_WITH_QUIC=y
 CONFIG_SING_BOX_WITH_UTLS=y
-CONFIG_SING_BOX_WITH_WIREGUARD=y
 CONFIG_SQLITE3_COLUMN_METADATA=y
 CONFIG_SQLITE3_DYNAMIC_EXTENSIONS=y
 CONFIG_SQLITE3_FTS3=y
@@ -378,3 +374,7 @@ CONFIG_shadow-all=y
 CONFIG_PACKAGE_iptables-mod-fullconenat=y
 # CONFIG_PACKAGE_kmod-crypto-kpp is not set
 CONFIG_PACKAGE_kmod-ipt-fullconenat=y
+# CONFIG_PACKAGE_luci-proto-wireguard=y
+# CONFIG_PACKAGE_kmod-wireguard=y
+# CONFIG_PACKAGE_wireguard-tools=y
+# CONFIG_SING_BOX_WITH_WIREGUARD=y
