--- a/.github/workflows/x86-64-Lienol.yml
+++ b/.github/workflows/x86-64-Lienol.yml
@@ -21,7 +21,7 @@ on:
 
 env:
   REPO_URL: https://github.com/Lienol/openwrt
-  REPO_BRANCH: v23.05
+  REPO_BRANCH: 23.05
   CONFIG_FILE: x86-64+.config
   DIY_P1_SH: diy-part1.sh
   UPLOAD_BIN_DIR: false
